header_files = [
  'include/EAAssert/eaassert.h',
  'include/EAAssert/version.h',
  'include/EABase/config/eacompiler.h',
  'include/EABase/config/eacompilertraits.h',
  'include/EABase/config/eaplatform.h',
  'include/EABase/eabase.h',
  'include/EABase/eahave.h',
  'include/EABase/earesult.h',
  'include/EABase/eastdarg.h',
  'include/EABase/eaunits.h',
  'include/EABase/int128.h',
  'include/EABase/nullptr.h',
  'include/EABase/version.h',
  'include/EASTL/algorithm.h',
  'include/EASTL/allocator.h',
  'include/EASTL/allocator_malloc.h',
  'include/EASTL/any.h',
  'include/EASTL/array.h',
  'include/EASTL/atomic.h',
  'include/EASTL/bit.h',
  'include/EASTL/bitset.h',
  'include/EASTL/bitvector.h',
  'include/EASTL/bonus/adaptors.h',
  'include/EASTL/bonus/call_traits.h',
  'include/EASTL/bonus/compressed_pair.h',
  'include/EASTL/bonus/fixed_ring_buffer.h',
  'include/EASTL/bonus/fixed_tuple_vector.h',
  'include/EASTL/bonus/intrusive_sdlist.h',
  'include/EASTL/bonus/intrusive_slist.h',
  'include/EASTL/bonus/list_map.h',
  'include/EASTL/bonus/lru_cache.h',
  'include/EASTL/bonus/overloaded.h',
  'include/EASTL/bonus/ring_buffer.h',
  'include/EASTL/bonus/sort_extra.h',
  'include/EASTL/bonus/tuple_vector.h',
  'include/EASTL/chrono.h',
  'include/EASTL/compare.h',
  'include/EASTL/core_allocator.h',
  'include/EASTL/core_allocator_adapter.h',
  'include/EASTL/deque.h',
  'include/EASTL/finally.h',
  'include/EASTL/fixed_allocator.h',
  'include/EASTL/fixed_function.h',
  'include/EASTL/fixed_hash_map.h',
  'include/EASTL/fixed_hash_set.h',
  'include/EASTL/fixed_list.h',
  'include/EASTL/fixed_map.h',
  'include/EASTL/fixed_set.h',
  'include/EASTL/fixed_slist.h',
  'include/EASTL/fixed_string.h',
  'include/EASTL/fixed_substring.h',
  'include/EASTL/fixed_vector.h',
  'include/EASTL/functional.h',
  'include/EASTL/hash_map.h',
  'include/EASTL/hash_set.h',
  'include/EASTL/heap.h',
  'include/EASTL/initializer_list.h',
  'include/EASTL/internal/atomic/arch/arch.h',
  'include/EASTL/internal/atomic/arch/arch_add_fetch.h',
  'include/EASTL/internal/atomic/arch/arch_and_fetch.h',
  'include/EASTL/internal/atomic/arch/arch_cmpxchg_strong.h',
  'include/EASTL/internal/atomic/arch/arch_cmpxchg_weak.h',
  'include/EASTL/internal/atomic/arch/arch_compiler_barrier.h',
  'include/EASTL/internal/atomic/arch/arch_cpu_pause.h',
  'include/EASTL/internal/atomic/arch/arch_exchange.h',
  'include/EASTL/internal/atomic/arch/arch_fetch_add.h',
  'include/EASTL/internal/atomic/arch/arch_fetch_and.h',
  'include/EASTL/internal/atomic/arch/arch_fetch_or.h',
  'include/EASTL/internal/atomic/arch/arch_fetch_sub.h',
  'include/EASTL/internal/atomic/arch/arch_fetch_xor.h',
  'include/EASTL/internal/atomic/arch/arch_load.h',
  'include/EASTL/internal/atomic/arch/arch_memory_barrier.h',
  'include/EASTL/internal/atomic/arch/arch_or_fetch.h',
  'include/EASTL/internal/atomic/arch/arch_signal_fence.h',
  'include/EASTL/internal/atomic/arch/arch_store.h',
  'include/EASTL/internal/atomic/arch/arch_sub_fetch.h',
  'include/EASTL/internal/atomic/arch/arch_thread_fence.h',
  'include/EASTL/internal/atomic/arch/arch_xor_fetch.h',
  'include/EASTL/internal/atomic/arch/arm/arch_arm.h',
  'include/EASTL/internal/atomic/arch/arm/arch_arm_load.h',
  'include/EASTL/internal/atomic/arch/arm/arch_arm_memory_barrier.h',
  'include/EASTL/internal/atomic/arch/arm/arch_arm_store.h',
  'include/EASTL/internal/atomic/arch/arm/arch_arm_thread_fence.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_add_fetch.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_and_fetch.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_cmpxchg_strong.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_cmpxchg_weak.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_exchange.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_fetch_add.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_fetch_and.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_fetch_or.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_fetch_sub.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_fetch_xor.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_load.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_memory_barrier.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_or_fetch.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_store.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_sub_fetch.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_thread_fence.h',
  'include/EASTL/internal/atomic/arch/x86/arch_x86_xor_fetch.h',
  'include/EASTL/internal/atomic/atomic.h',
  'include/EASTL/internal/atomic/atomic_asserts.h',
  'include/EASTL/internal/atomic/atomic_base_width.h',
  'include/EASTL/internal/atomic/atomic_casts.h',
  'include/EASTL/internal/atomic/atomic_flag.h',
  'include/EASTL/internal/atomic/atomic_flag_standalone.h',
  'include/EASTL/internal/atomic/atomic_integral.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_add_fetch.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_and_fetch.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_base.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_cmpxchg_strong.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_cmpxchg_weak.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_compiler_barrier.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_cpu_pause.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_exchange.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_fetch_add.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_fetch_and.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_fetch_or.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_fetch_sub.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_fetch_xor.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_load.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_memory_barrier.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_or_fetch.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_signal_fence.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_store.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_sub_fetch.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_thread_fence.h',
  'include/EASTL/internal/atomic/atomic_macros/atomic_macros_xor_fetch.h',
  'include/EASTL/internal/atomic/atomic_macros.h',
  'include/EASTL/internal/atomic/atomic_memory_order.h',
  'include/EASTL/internal/atomic/atomic_pointer.h',
  'include/EASTL/internal/atomic/atomic_size_aligned.h',
  'include/EASTL/internal/atomic/atomic_standalone.h',
  'include/EASTL/internal/atomic/compiler/compiler.h',
  'include/EASTL/internal/atomic/compiler/compiler_add_fetch.h',
  'include/EASTL/internal/atomic/compiler/compiler_and_fetch.h',
  'include/EASTL/internal/atomic/compiler/compiler_barrier.h',
  'include/EASTL/internal/atomic/compiler/compiler_cmpxchg_strong.h',
  'include/EASTL/internal/atomic/compiler/compiler_cmpxchg_weak.h',
  'include/EASTL/internal/atomic/compiler/compiler_cpu_pause.h',
  'include/EASTL/internal/atomic/compiler/compiler_exchange.h',
  'include/EASTL/internal/atomic/compiler/compiler_fetch_add.h',
  'include/EASTL/internal/atomic/compiler/compiler_fetch_and.h',
  'include/EASTL/internal/atomic/compiler/compiler_fetch_or.h',
  'include/EASTL/internal/atomic/compiler/compiler_fetch_sub.h',
  'include/EASTL/internal/atomic/compiler/compiler_fetch_xor.h',
  'include/EASTL/internal/atomic/compiler/compiler_load.h',
  'include/EASTL/internal/atomic/compiler/compiler_memory_barrier.h',
  'include/EASTL/internal/atomic/compiler/compiler_or_fetch.h',
  'include/EASTL/internal/atomic/compiler/compiler_signal_fence.h',
  'include/EASTL/internal/atomic/compiler/compiler_store.h',
  'include/EASTL/internal/atomic/compiler/compiler_sub_fetch.h',
  'include/EASTL/internal/atomic/compiler/compiler_thread_fence.h',
  'include/EASTL/internal/atomic/compiler/compiler_xor_fetch.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_add_fetch.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_and_fetch.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_barrier.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_cmpxchg_strong.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_cmpxchg_weak.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_cpu_pause.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_exchange.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_fetch_add.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_fetch_and.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_fetch_or.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_fetch_sub.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_fetch_xor.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_load.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_or_fetch.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_signal_fence.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_store.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_sub_fetch.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_thread_fence.h',
  'include/EASTL/internal/atomic/compiler/gcc/compiler_gcc_xor_fetch.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_add_fetch.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_and_fetch.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_barrier.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_cmpxchg_strong.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_cmpxchg_weak.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_cpu_pause.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_exchange.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_fetch_add.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_fetch_and.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_fetch_or.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_fetch_sub.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_fetch_xor.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_or_fetch.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_signal_fence.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_sub_fetch.h',
  'include/EASTL/internal/atomic/compiler/msvc/compiler_msvc_xor_fetch.h',
  'include/EASTL/internal/char_traits.h',
  'include/EASTL/internal/config.h',
  'include/EASTL/internal/copy_help.h',
  'include/EASTL/internal/enable_shared.h',
  'include/EASTL/internal/fill_help.h',
  'include/EASTL/internal/fixed_pool.h',
  'include/EASTL/internal/function.h',
  'include/EASTL/internal/function_detail.h',
  'include/EASTL/internal/function_help.h',
  'include/EASTL/internal/functional_base.h',
  'include/EASTL/internal/generic_iterator.h',
  'include/EASTL/internal/hashtable.h',
  'include/EASTL/internal/in_place_t.h',
  'include/EASTL/internal/integer_sequence.h',
  'include/EASTL/internal/intrusive_hashtable.h',
  'include/EASTL/internal/mem_fn.h',
  'include/EASTL/internal/memory_base.h',
  'include/EASTL/internal/move_help.h',
  'include/EASTL/internal/pair_fwd_decls.h',
  'include/EASTL/internal/piecewise_construct_t.h',
  'include/EASTL/internal/red_black_tree.h',
  'include/EASTL/internal/smart_ptr.h',
  'include/EASTL/internal/thread_support.h',
  'include/EASTL/internal/tuple_fwd_decls.h',
  'include/EASTL/internal/type_compound.h',
  'include/EASTL/internal/type_detected.h',
  'include/EASTL/internal/type_fundamental.h',
  'include/EASTL/internal/type_pod.h',
  'include/EASTL/internal/type_properties.h',
  'include/EASTL/internal/type_transformations.h',
  'include/EASTL/internal/type_void_t.h',
  'include/EASTL/intrusive_hash_map.h',
  'include/EASTL/intrusive_hash_set.h',
  'include/EASTL/intrusive_list.h',
  'include/EASTL/intrusive_ptr.h',
  'include/EASTL/iterator.h',
  'include/EASTL/linked_array.h',
  'include/EASTL/linked_ptr.h',
  'include/EASTL/list.h',
  'include/EASTL/map.h',
  'include/EASTL/memory.h',
  'include/EASTL/meta.h',
  'include/EASTL/numeric.h',
  'include/EASTL/numeric_limits.h',
  'include/EASTL/optional.h',
  'include/EASTL/priority_queue.h',
  'include/EASTL/queue.h',
  'include/EASTL/random.h',
  'include/EASTL/ratio.h',
  'include/EASTL/safe_ptr.h',
  'include/EASTL/scoped_array.h',
  'include/EASTL/scoped_ptr.h',
  'include/EASTL/segmented_vector.h',
  'include/EASTL/set.h',
  'include/EASTL/shared_array.h',
  'include/EASTL/shared_ptr.h',
  'include/EASTL/slist.h',
  'include/EASTL/sort.h',
  'include/EASTL/span.h',
  'include/EASTL/stack.h',
  'include/EASTL/string.h',
  'include/EASTL/string_hash_map.h',
  'include/EASTL/string_map.h',
  'include/EASTL/string_view.h',
  'include/EASTL/tuple.h',
  'include/EASTL/type_traits.h',
  'include/EASTL/unique_ptr.h',
  'include/EASTL/unordered_map.h',
  'include/EASTL/unordered_set.h',
  'include/EASTL/utility.h',
  'include/EASTL/variant.h',
  'include/EASTL/vector.h',
  'include/EASTL/vector_map.h',
  'include/EASTL/vector_multimap.h',
  'include/EASTL/vector_multiset.h',
  'include/EASTL/vector_set.h',
  'include/EASTL/version.h',
  'include/EASTL/weak_ptr.h',
  'include/EAStdC/EAAlignment.h',
  'include/EAStdC/EABitTricks.h',
  'include/EAStdC/EAByteCrackers.h',
  'include/EAStdC/EACType.h',
  'include/EAStdC/EACallback.h',
  'include/EAStdC/EADateTime.h',
  'include/EAStdC/EAEndian.h',
  'include/EAStdC/EAFixedPoint.h',
  'include/EAStdC/EAGlobal.h',
  'include/EAStdC/EAHashCRC.h',
  'include/EAStdC/EAHashString.h',
  'include/EAStdC/EAMathHelp.h',
  'include/EAStdC/EAMemory.h',
  'include/EAStdC/EAProcess.h',
  'include/EAStdC/EARandom.h',
  'include/EAStdC/EARandomDistribution.h',
  'include/EAStdC/EAScanf.h',
  'include/EAStdC/EASingleton.h',
  'include/EAStdC/EASprintf.h',
  'include/EAStdC/EASprintfOrdered.h',
  'include/EAStdC/EAStdC.h',
  'include/EAStdC/EAStopwatch.h',
  'include/EAStdC/EAString.h',
  'include/EAStdC/EATextUtil.h',
  'include/EAStdC/Int128_t.h',
  'include/EAStdC/internal/Config.h',
  'include/EAStdC/internal/IntrusiveList.h',
  'include/EAStdC/internal/ScanfCore.h',
  'include/EAStdC/internal/SprintfCore.h',
  'include/EAStdC/internal/Thread.h',
  'include/EAStdC/internal/stdioEA.h',
  'include/EAStdC/version.h',
  'include/eathread/android/eathread_atomic_android.h',
  'include/eathread/android/eathread_atomic_android_c11.h',
  'include/eathread/apple/eathread_atomic_apple.h',
  'include/eathread/apple/eathread_callstack_apple.h',
  'include/eathread/apple/eathread_sync_apple.h',
  'include/eathread/arm/eathread_sync_arm.h',
  'include/eathread/armgcc/eathread_sync_armgcc.h',
  'include/eathread/cpp11/eathread_atomic_cpp11.h',
  'include/eathread/eathread.h',
  'include/eathread/eathread_atomic.h',
  'include/eathread/eathread_barrier.h',
  'include/eathread/eathread_callstack.h',
  'include/eathread/eathread_callstack_context.h',
  'include/eathread/eathread_condition.h',
  'include/eathread/eathread_futex.h',
  'include/eathread/eathread_list.h',
  'include/eathread/eathread_mutex.h',
  'include/eathread/eathread_pool.h',
  'include/eathread/eathread_rwmutex.h',
  'include/eathread/eathread_rwmutex_ip.h',
  'include/eathread/eathread_rwsemalock.h',
  'include/eathread/eathread_rwspinlock.h',
  'include/eathread/eathread_rwspinlockw.h',
  'include/eathread/eathread_semaphore.h',
  'include/eathread/eathread_spinlock.h',
  'include/eathread/eathread_storage.h',
  'include/eathread/eathread_sync.h',
  'include/eathread/eathread_thread.h',
  'include/eathread/gcc/eathread_atomic_gcc.h',
  'include/eathread/gcc/eathread_sync_gcc.h',
  'include/eathread/internal/atomic.h',
  'include/eathread/internal/config.h',
  'include/eathread/internal/dllinfo.h',
  'include/eathread/internal/eathread_atomic.h',
  'include/eathread/internal/eathread_atomic_standalone.h',
  'include/eathread/internal/eathread_atomic_standalone_gcc.h',
  'include/eathread/internal/eathread_atomic_standalone_msvc.h',
  'include/eathread/internal/eathread_global.h',
  'include/eathread/internal/timings.h',
  'include/eathread/shared_array_mt.h',
  'include/eathread/shared_ptr_mt.h',
  'include/eathread/version.h',
  'include/eathread/x86/eathread_atomic_x86.h',
  'include/eathread/x86/eathread_sync_x86.h',
  'include/eathread/x86-64/eathread_atomic_x86-64.h',
  'include/eathread/x86-64/eathread_sync_x86-64.h',
  'source/EAThread/android/com_ea_EAThread_EAThread.h',
]

source_files = [
  'source/allocator_eastl.cpp',
  'source/assert.cpp',
  'source/atomic.cpp',
  'source/fixed_pool.cpp',
  'source/hashtable.cpp',
  'source/intrusive_list.cpp',
  'source/numeric_limits.cpp',
  'source/red_black_tree.cpp',
  'source/string.cpp',
  'source/thread_support.cpp',
  'source/EAAssert/eaassert.cpp',
  'source/EAStdC/EACType.cpp',
  'source/EAStdC/EACallback.cpp',
  'source/EAStdC/EADateTime.cpp',
  'source/EAStdC/EAFixedPoint.cpp',
  'source/EAStdC/EAGlobal.cpp',
  'source/EAStdC/EAHashCRC.cpp',
  'source/EAStdC/EAHashString.cpp',
  'source/EAStdC/EAMemory.cpp',
  'source/EAStdC/EAProcess.cpp',
  'source/EAStdC/EARandom.cpp',
  'source/EAStdC/EAScanf.cpp',
  'source/EAStdC/EAScanfCore.cpp',
  'source/EAStdC/EASprintf.cpp',
  'source/EAStdC/EASprintfCore.cpp',
  'source/EAStdC/EASprintfOrdered.cpp',
  'source/EAStdC/EAStdC.cpp',
  'source/EAStdC/EAStopwatch.cpp',
  'source/EAStdC/EAString.cpp',
  'source/EAStdC/EATextUtil.cpp',
  'source/EAStdC/Int128_t.cpp',
  'source/EAThread/eathread.cpp',
  'source/EAThread/eathread_barrier.cpp',
  'source/EAThread/eathread_callstack.cpp',
  'source/EAThread/eathread_condition.cpp',
  'source/EAThread/eathread_futex.cpp',
  'source/EAThread/eathread_mutex.cpp',
  'source/EAThread/eathread_pool.cpp',
  'source/EAThread/eathread_rwmutex.cpp',
  'source/EAThread/eathread_rwmutex_ip.cpp',
  'source/EAThread/eathread_semaphore.cpp',
  'source/EAThread/eathread_storage.cpp',
  'source/EAThread/eathread_thread.cpp',
  'source/EAThread/version.cpp',
]

extra_files = [
  'include/EAStdC/Win32/EAMathHelpWin32.inl',
  'include/EAStdC/internal/EAMemory.inl',
  'doc/EASTL.natvis',
]

include_dirs = [
  'include',
]

build_args = [
]

if is_msvc
  build_args += ['-D_CRT_SECURE_NO_WARNINGS', '-D_SCL_SECURE_NO_WARNINGS']
endif

eastl = static_library(
  'EASTL',
  header_files,
  source_files,
  include_directories: include_dirs,
  cpp_args: default_cpp_args + build_args,
  override_options: {
    'werror': false
    }
)

