header_files = [
  'acl/compression/compress.h',
  'acl/compression/compression_level.h',
  'acl/compression/compression_settings.h',
  'acl/compression/convert.h',
  'acl/compression/impl/animated_track_utils.h',
  'acl/compression/impl/clip_context.h',
  'acl/compression/impl/compact_constant_streams.h',
  'acl/compression/impl/compress.database.impl.h',
  'acl/compression/impl/compress.impl.h',
  'acl/compression/impl/compress.scalar.impl.h',
  'acl/compression/impl/compress.transform.impl.h',
  'acl/compression/impl/compression_settings.impl.h',
  'acl/compression/impl/constant_track_impl.h',
  'acl/compression/impl/convert.impl.h',
  'acl/compression/impl/convert_rotation_streams.h',
  'acl/compression/impl/normalize_streams.h',
  'acl/compression/impl/normalize_track_impl.h',
  'acl/compression/impl/quantize_streams.h',
  'acl/compression/impl/quantize_track_impl.h',
  'acl/compression/impl/sample_streams.h',
  'acl/compression/impl/segment_context.h',
  'acl/compression/impl/segment_streams.h',
  'acl/compression/impl/track.impl.h',
  'acl/compression/impl/track_array.impl.h',
  'acl/compression/impl/track_bit_rate_database.h',
  'acl/compression/impl/track_error.impl.h',
  'acl/compression/impl/track_list_context.h',
  'acl/compression/impl/track_range.h',
  'acl/compression/impl/track_range_impl.h',
  'acl/compression/impl/track_stream.h',
  'acl/compression/impl/transform_bit_rate_permutations.h',
  'acl/compression/impl/write_compression_stats_impl.h',
  'acl/compression/impl/write_range_data.h',
  'acl/compression/impl/write_segment_data.h',
  'acl/compression/impl/write_stats.h',
  'acl/compression/impl/write_stream_data.h',
  'acl/compression/impl/write_sub_track_types.h',
  'acl/compression/impl/write_track_data_impl.h',
  'acl/compression/impl/write_track_metadata.h',
  'acl/compression/output_stats.h',
  'acl/compression/track.h',
  'acl/compression/track_array.h',
  'acl/compression/track_error.h',
  'acl/compression/transform_error_metrics.h',
  'acl/compression/transform_pose_utils.h',
  'acl/core/additive_utils.h',
  'acl/core/algorithm_types.h',
  'acl/core/ansi_allocator.h',
  'acl/core/bit_manip_utils.h',
  'acl/core/bitset.h',
  'acl/core/buffer_tag.h',
  'acl/core/compressed_database.h',
  'acl/core/compressed_tracks.h',
  'acl/core/compressed_tracks_version.h',
  'acl/core/enum_utils.h',
  'acl/core/error.h',
  'acl/core/error_result.h',
  'acl/core/floating_point_exceptions.h',
  'acl/core/hash.h',
  'acl/core/iallocator.h',
  'acl/core/impl/compiler_utils.h',
  'acl/core/impl/compressed_database.impl.h',
  'acl/core/impl/compressed_headers.h',
  'acl/core/impl/compressed_tracks.impl.h',
  'acl/core/impl/debug_track_writer.h',
  'acl/core/impl/track_desc.impl.h',
  'acl/core/impl/track_formats.impl.h',
  'acl/core/interpolation_utils.h',
  'acl/core/iterator.h',
  'acl/core/memory_utils.h',
  'acl/core/ptr_offset.h',
  'acl/core/quality_tiers.h',
  'acl/core/range_reduction_types.h',
  'acl/core/scope_profiler.h',
  'acl/core/string.h',
  'acl/core/track_desc.h',
  'acl/core/track_formats.h',
  'acl/core/track_traits.h',
  'acl/core/track_types.h',
  'acl/core/track_writer.h',
  'acl/core/unique_ptr.h',
  'acl/core/utils.h',
  'acl/core/variable_bit_rates.h',
  'acl/decompression/database/database.h',
  'acl/decompression/database/database_settings.h',
  'acl/decompression/database/database_streamer.h',
  'acl/decompression/database/impl/database.impl.h',
  'acl/decompression/database/impl/database_context.h',
  'acl/decompression/database/impl/database_streamer.impl.h',
  'acl/decompression/database/impl/debug_database_streamer.h',
  'acl/decompression/database/null_database_streamer.h',
  'acl/decompression/decompress.h',
  'acl/decompression/decompression_settings.h',
  'acl/decompression/impl/decompress.impl.h',
  'acl/decompression/impl/decompression_context_selector.h',
  'acl/decompression/impl/decompression_version_selector.h',
  'acl/decompression/impl/scalar_track_decompression.h',
  'acl/decompression/impl/track_cache.h',
  'acl/decompression/impl/transform_animated_track_cache.h',
  'acl/decompression/impl/transform_constant_track_cache.h',
  'acl/decompression/impl/transform_decompression_context.h',
  'acl/decompression/impl/transform_track_decompression.h',
  'acl/decompression/impl/universal_track_decompression.h',
  'acl/io/clip_reader.h',
  'acl/io/clip_reader_error.h',
  'acl/io/clip_writer.h',
  'acl/math/quat_packing.h',
  'acl/math/quatf.h',
  'acl/math/scalar_packing.h',
  'acl/math/vector4_packing.h',
  'acl/math/vector4f.h',
]

source_files = [
]

extra_files = [
]

include_dirs = [
]

build_args = [
]

# acl = static_library(
#   'acl',
#   header_files,
#   source_files,
#   include_directories: include_dirs,
#   cpp_args: default_cpp_args + build_args,
#   extra_files: extra_files,
# )

acl_dep = declare_dependency(
  include_directories: ['.'],
)

